2002-02-10  Daniel Jacobowitz  <drow@mvista.com>

	* nlmconv.c: Back out localtime PARAMS change.

2002-02-10  Daniel Jacobowitz  <drow@mvista.com>

	* coffdump.c: Include "getopt.h" after "bucomm.h"
	so that macros are defined correctly.
	* nlmconv.c: Add PARAMS ((const time_t *)) to localtime
	prototype.  Prototype main.
	* nlmheader.y: Add PARAMS ((int)) to strerror prototype.

2002-02-06  Alexandre Oliva  <aoliva@redhat.com>

	* MAINTAINERS: Added self as SH co-maintainer.

2002-02-05  Nick Clifton <nickc@redhat.com>

	* po/tr.po: Updated translation.

2002-02-01  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am"
	* Makefile.in: Regenerate.

2002-01-29  Daniel Jacobowitz  <drow@mvista.com>

	* nm.c (print_value): Mark abfd unused.

2002-01-29  Daniel Jacobowitz  <drow@mvista.com>

	* unwind-ia64.c (unw_decoder): Change second argument
	to unsigned int, to match function prototypes.

2002-01-29  Daniel Jacobowitz  <drow@mvista.com>

	* objdump.c: Include "getopt.h" after "bucomm.h" so that
	__GNU_LIBRARY__ will be defined.
	* size.c: Likewise.

2002-01-27  Daniel Jacobowitz  <drow@mvista.com>

	* configure: Regenerated.

2002-01-26  Hans-Peter Nilsson  <hp@bitrange.com>

	* doc/Makefile.am (install): Depend on install-info.
	* doc/Makefile.in: Regenerate.

2002-01-25  Jason R. Thorpe <thorpej@wasabisystems.com>

	* objcopy.c (strip_usage): Document -d as an alias
	--strip-debug.

	* size.c (usage): Document [-t | --totals] options.
	(long_options): Add --totals option.
	(main): If the [-t | --totals] option is specified and
	the output format is Berkeley-style, print the total
	text, data, and bss sizes of all objects listed.
	(print_berkeley_format): If the [-t | --totals] option
	is specified, track the total text, data, and bss
	sizes.
	* doc/binutils.texi (size): Document [-t | --totals] options.
	(strip): Document -d as an alias for --strip-debug.
	* NEWS: Mention new feature of size.
