@@ -1,3 +1,9 @@
+2002-02-11  Alan Modra  <amodra@bigpond.net.au>
+
+	* objcopy.c (MKDIR): Define.
+	(copy_archive): Make name_list.name const.  Use MKDIR.
+	Handle duplicate files in archives by making more temp dirs.
+
 2002-02-10  Daniel Jacobowitz  <drow@mvista.com>
 
 	* nlmconv.c: Back out localtime PARAMS change.
